Ensure footnotes don't have huge vertical gaps.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -57,3 +57,7 @@ div.footnotes {
     font-size: 10px;
     font-style: italic; 
 }
+
+div.footnotes p {
+    margin: 5px;
+}
